created and styled the landing page

--- a/appraisalapp/templates/landing.html
+++ b/appraisalapp/templates/landing.html
@@ -1,1 +1,38 @@
 {%extends 'base.html'%}
+{% block content %}
+<div class="landing">
+    <div class="banner-header">
+        <img src="../static/images/landing.jpeg" id="acc-banner-img">
+        <div class="header-container">
+            <h2><b>Startup Accelerator Reviews for transparency in the world of startups.
+                Help the Startup World up it’s game.
+                
+                
+                
+                </b></h2>
+            <br>
+            <br>
+            <h5><b>Find startup accelerators. Read reviews. Write reviews</b></h5>
+            <br>
+            
+        </div>
+    </div>
+    <div class="mission">
+        <div class="mission-text">
+            <h4><b>Our Mission</b></h4>
+            <br>
+            <p><b>Our mission is to help you find the right startup accelerator and help you make better choices by bringing transparency to the world of startups. You get to find suitable support that is worth it.</b></p>
+            <p><b>Startup accelerators claim to change your company and help you secure your first big round of funding but it it worth it?</b></p>
+        </div>
+        <div class="mission-img">
+            <img src="https://images.pexels.com/photos/1367274/pexels-photo-1367274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" id="acc-mission-img">
+        </div>
+
+      
+    </div>
+   
+</div>
+
+{%endblock%}
+
+
