--- a/appraisalapp/templates/base.html
+++ b/appraisalapp/templates/base.html
@@ -14,9 +14,8 @@
 
  {% block styles %}
     
-    <link rel="icon" href="">
+    <!-- <link rel="icon" href=""> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -30,6 +29,13 @@
  {% block content %} 
 
  {%endblock%}
+
+ <footer>
+   <div>
+     <p class="footer-text">Quality Appraisal 2020</p>
+   </div>
+ </footer>
+ 
 
  {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
