--- a/appraisalapp/templates/navbar.html
+++ b/appraisalapp/templates/navbar.html
@@ -9,7 +9,7 @@
           <div class="navbar-nav ml-auto">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-item nav-link" href="">Home</a>
+                <a class="nav-item nav-link" href="{% url 'landing' %}">Home</a>
               </li>
             
                 {% comment %} <li class="nav-item">
@@ -27,7 +27,7 @@
                   <a class="nav-item nav-link" href="">Log Out</a>
                 </li> {% endcomment %}
                 <li class="nav-item">
-                  <a class="nav-item nav-link" href="">Log In</a>
+                  <a class="nav-item nav-link" href="/accounts/login/">Log In</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="">Sign Up</a>
