--- a/appraisalapp/templates/navbar.html
+++ b/appraisalapp/templates/navbar.html
@@ -30,7 +30,7 @@
                   <a class="nav-item nav-link" href="/accounts/login/">Log In</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-item nav-link" href="">Sign Up</a>
+                  <a class="nav-item nav-link" href="/accounts/register/">Sign Up</a>
                 </li>
              
             </ul>
