--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -72,6 +72,20 @@ body{
     
 }
 
+#acc-banner-img-signup{
+    width: inherit;
+    margin-left: 0;
+    margin-top:0px;
+    margin-left:0px;
+    margin-right: 0px;
+    filter: brightness(50%);
+    
+    /* height: 90vh; */
+    padding-top: 0px;
+    
+}
+
+
 .header-container{
     position: absolute;
     top: 60%;
@@ -83,6 +97,7 @@ body{
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
 }
+
 .mission{
     width: 100%;
     padding-top: 10px;
@@ -170,6 +185,14 @@ footer{
    
     
     font-family: 'Montserrat', sans-serif;
+}
+
+.col-md-5{
+    position: relative;
+    /* top: 60%; */
+    /* margin-top: -30%; */
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .col-md-6{
     position: relative;
