created class company

--- a/appraisalapp/templates/base.html
+++ b/appraisalapp/templates/base.html
@@ -14,7 +14,7 @@
 
  {% block styles %}
     
-    <!-- <link rel="icon" href=""> -->
+    <!-- <link rel="icon" href="https://cdn5.vectorstock.com/i/thumbs/94/89/5-star-review-yellow-icon-five-stars-gold-vector-28489489.jpg"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
