added companies and their details

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,11 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-    width: 100%;
+    /* width: 100%; */
+    position: relative;
+    min-height: 100%;
+    padding-bottom: 100px;
+    /* text-align: center; */
 }
 
 /* <<<<<<<<<<<<<<<<<<<< Navbar >>>>>>>>>>>>>>>>>>>> */
@@ -47,6 +51,14 @@ body{
     padding: 0;
     /* object-fit: cover; */
 }
+
+.container{
+    max-width: 1000px;
+    text-align: left;
+    padding-top: 40px;
+}
+
+
 .landing{
     padding-top: 0% !important;
 }
@@ -150,6 +162,11 @@ footer{
     padding-top: 40px;
     text-align: center;
     bottom: 0;
+    
+    padding-top: 10px;
+    
+    position: absolute;
+    
 }
 
 .footer-text{
@@ -177,12 +194,6 @@ footer{
     padding-top: 0px;
 }
 .panel{
-    /* position: absolute; */
-    /* top: 50%;
-    left: 50%; */
-    /* transform: translate(-50%, -50%); */
-    /* text-align: center; */
-   
     
     font-family: 'Montserrat', sans-serif;
 }
@@ -213,4 +224,10 @@ footer{
         width: 100%;
         font-size: 1rem;
     }
+}
+
+.form-squeeze{
+    max-width: 700px;
+    margin: auto;
+    padding: 20px 60px;
 }
