--- a/appraisalapp/templates/navbar.html
+++ b/appraisalapp/templates/navbar.html
@@ -13,13 +13,13 @@
               </li>
               {% if user.is_superuser %}
                 <li class="nav-item">
-                  <a class="nav-item nav-link" href="">Add Company</a>
+                  <a class="nav-item nav-link" href="{% url 'createcompany' %}">Add Company</a>
                 </li>
               {% endif %}
                
               
                 <li class="nav-item">
-                  <a class="nav-item nav-link" href="">Companies</a>
+                  <a class="nav-item nav-link" href="{% url 'companylist' %}">Companies</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="">Latest Reviews</a>
