--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,11 +2,11 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-   
+    width: 100%;
     position: relative;
     min-height: 100%;
     padding-bottom: 100px;
-    
+    /* text-align: center; */
 }
 
 /* <<<<<<<<<<<<<<<<<<<< Navbar >>>>>>>>>>>>>>>>>>>> */
@@ -49,6 +49,7 @@ body{
     width: 100%;
     margin: 0px;
     padding: 0;
+    /* object-fit: cover; */
 }
 
 .container{
@@ -66,7 +67,7 @@ body{
   
     margin-top: 0px;
     padding-top: 0;
-    
+    position: relative;
 
 }
 
@@ -91,7 +92,7 @@ body{
     margin-right: 0px;
     filter: brightness(50%);
     
-    
+    /* height: 90vh; */
     padding-top: 0px;
     
 }
@@ -99,7 +100,7 @@ body{
 
 .header-container{
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -189,7 +190,7 @@ footer{
     margin-right: 0px;
     filter: brightness(50%);
     overflow-x: hidden;
-  
+    /* height: 90vh; */
     padding-top: 0px;
 }
 .panel{
@@ -199,7 +200,8 @@ footer{
 
 .col-md-5{
     position: relative;
-    
+    /* top: 60%; */
+    /* margin-top: -30%; */
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -209,7 +211,9 @@ footer{
     margin-top: -35%;
     left: 50%;
     transform: translate(-50%, -50%);
-   
+    /* text-align: center; */
+    /* width: 600px;
+    min-width: 300px;   */
 }
 @media screen and (max-width: 1000px) {
     .col-md-6{
