--- a/appraisalapp/templates/django_registration/registration_form.html
+++ b/appraisalapp/templates/django_registration/registration_form.html
@@ -6,7 +6,7 @@
     <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" id="acc-banner-img-signup">
     <div class="header-container" style="background-color: rgba(242, 245, 248, 0.76); color:black; padding:10px; border-radius:10px; text-align:left !important; margin-top:30px; font-size:0.9rem;">
         <h3 class="text-center">Sign up</h3>
-        <form  action="/accounts/login/" method="post">
+        <form  action="/accounts/register/" method="post">
             {% csrf_token %}
             {% bootstrap_form form%}
 
