--- a/appraisalapp/templates/companies/company_form.html
+++ b/appraisalapp/templates/companies/company_form.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <div class="form-squeeze">
-            <form method="{%url 'createcompany'%}" enctype="multipart/form-data">
+            <form action="{%url 'createcompany'%}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <fieldset class="form-group">
                     <legend>Add A New Company</legend>
