--- a/appraisalapp/templates/reviews/review_form.html
+++ b/appraisalapp/templates/reviews/review_form.html
@@ -1,6 +1,7 @@
 {% extends 'reviews/base.html' %}
 {% load crispy_forms_tags %}
 {% block page_title %}Leave A Review{% endblock %}
+{% load bootstrap3 %} {% load static %}
 {% block content %}
     <div class="container">
         <div class="form-squeeze">
