--- a/appraisalapp/templates/reviews/review_home.html
+++ b/appraisalapp/templates/reviews/review_home.html
@@ -1,5 +1,5 @@
 {% extends 'reviews/base.html' %}
-
+{% load bootstrap3 %} {% load static %}
 {% block content %}
     <div class="container" style="text-align:center;">
     
