--- a/static/css/company.css
+++ b/static/css/company.css
@@ -486,18 +486,21 @@ p{
 }
 
 .btn:hover{
-    background-color: #cc7024;
+    background-color: #c57d5b;
     color: #ffffff;
     transition: 0.5s;
 }
 
 #submit{
-    border: 3px solid #cf7246;
+    border: 3px solid #c57d5b;
+    width:100%;
 }
 
 #submit:hover{
-    background-color: #b37018;
+    background-color:  #c57d5b;
     transition: 0.5s;
+    color:white;
+   
 }
 
 #company-index{
