--- a/static/css/company.css
+++ b/static/css/company.css
@@ -3,6 +3,7 @@
 body{
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    
 }
 /* <<<<<<<<<<<<<<<<<<<< Navbar >>>>>>>>>>>>>>>>>>>> */
 
@@ -56,6 +57,7 @@ body{
     min-height: 100%;
     padding-bottom: 100px;
     text-align: center;
+    
 }
 
 
@@ -64,6 +66,8 @@ body{
     max-width: 1000px;
     text-align: left;
     padding-top: 40px;
+   
+
 }
 
 /* <<<<<<<<<<<<<<<<<<<< Index Page >>>>>>>>>>>>>>>>>>>> */
@@ -366,7 +370,9 @@ body{
 
 .review-container{
     display: inline-block;
-    border-top: 1px solid #cbab82;
+    border-top: 1px solid #d48f33;
+    /* background-color: #bb815a;
+    color:white; */
     padding: 20px 40px;
     width: 700px;
     min-width: 350px;
@@ -446,7 +452,7 @@ p{
 .date-author{
     margin-top: 15px;
     font-size: 12px;
-    color: #a6a6a6;
+    color: #999797;
 }
 
 .company-rating{
